attempt to fix header image stretching

--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ body {
 }
 .title img {
   width: 100%;
+  height: auto;
   max-width: 400px;
   margin: 0 auto;
 }
