--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -16,6 +16,7 @@
 	margin-bottom: 1rem;
 	img {
 		width: 100%;
+		height: auto;
 		max-width: 400px;
 		margin: 0 auto;
 	}
